# RealTimeCutVADCXXLibrary

./: .gitignore  README.md  build_xcframework.sh
RealTimeCutVADCXXLibrary/: CMakeLists.txt  RealTimeCutVADCXXLibrary.h  algorithm.cpp  algorithm.h  c_wrapper.cpp  c_wrapper.h  memo.txt  misc.cpp  misc.h  process.cpp  process.h  realtime_cut_vad.cpp  realtime_cut_vad.h  silero.h  sileroV4.cpp  sileroV5.cpp  tool.cpp  tool.h
RealTimeCutVADCXXLibrary.xcodeproj/: project.pbxproj
RealTimeCutVADCXXLibrary/Frameworks/: README.txt
RealTimeCutVADCXXLibrary/main/: vad_file.cpp
